@@ -217,7 +217,7 @@ public class S2BeanDescProviderPropertyDescTest {
          * @return
          */
         public Number add(Number arg1, Number arg2) {
-            return new Integer(3);
+            return Integer.valueOf(3);
         }
 
         /**
